# notepad

./: CMakeLists.txt  makefile
include/: App.h  EditorWidget.h  Highlighter.h  MainWindow.h
src/: App.cpp  EditorWidget.cpp  Highlighter.cpp  MainWindow.cpp  main.cpp
